[gd_scene load_steps=11 format=3 uid="uid://bc8ertsqq0qdm"]

[ext_resource type="Script" path="res://scenes/UI/h_box_container.gd" id="1_fdn0j"]
[ext_resource type="PackedScene" uid="uid://bu8aru7n5drf8" path="res://scenes/UI/inventory_slot.tscn" id="1_tywlm"]
[ext_resource type="Script" path="res://scenes/UI/ui.gd" id="1_wpxx6"]
[ext_resource type="Texture2D" uid="uid://jmh54vb8a67l" path="res://assets/ingredients/cookbook.png" id="3_pfpoh"]
[ext_resource type="LabelSettings" uid="uid://du7rxt236lnys" path="res://scenes/UI/resources/inventory_font.tres" id="3_staen"]
[ext_resource type="Texture2D" uid="uid://ot5p054bl2rr" path="res://assets/ingredients/sack.png" id="5_pun84"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scld8"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.138637, 0.138638, 0.138637, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hbbv"]
bg_color = Color(0.824537, 0.636391, 0.400991, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.931187, 0.766325, 0.604129, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mw5rw"]
bg_color = Color(0.283875, 0.336369, 0.634543, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5l4e"]
bg_color = Color(0.487333, 0.552045, 0.842445, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_wpxx6")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 162.0
grow_horizontal = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scld8")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30
script = ExtResource("1_fdn0j")

[node name="CookbookSlot" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0hbbv")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CookbookSlot"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CookbookSlot/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CookbookSlot/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("3_pfpoh")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CookbookSlot/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "[W]"
label_settings = ExtResource("3_staen")
horizontal_alignment = 1

[node name="BerrySlot" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tywlm")]
layout_mode = 2

[node name="NutSlot" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tywlm")]
layout_mode = 2

[node name="TofuSlot" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tywlm")]
layout_mode = 2

[node name="CarrotSlot" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tywlm")]
layout_mode = 2

[node name="PepperSlot" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tywlm")]
layout_mode = 2

[node name="MintSlot" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("1_tywlm")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="InventorySpace" type="ProgressBar" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 27.0
theme_override_styles/background = SubResource("StyleBoxFlat_mw5rw")
theme_override_styles/fill = SubResource("StyleBoxFlat_b5l4e")
value = 50.0
show_percentage = false

[node name="CapacityLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 2.0
text = "30/30"
label_settings = ExtResource("3_staen")
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("5_pun84")
expand_mode = 3
